8211328: Different declaration and definition of ClassLoaderData::classes_do() leads to build failures

Reviewed-by: dcubed, coleenp